<resources translatable="false">
    <string name="operate_success">操作成功</string>
    <string name="operate_failed">操作失败</string>
    <string name="get_permission_error">获取权限失败</string>
    <string name="wifi_ssid_empty">Wi-Fi 名称不能为空</string>
    <string name="enter_wifi_pwd">请输入密码</string>
    <string name="select_wifi">设置 Wi-Fi</string>
    <string name="select_device">添加设备</string>
    <string name="next">下一步</string>
    <string name="rest_wifi_confirm_operation">已听到 Wi-Fi 重置提示音</string>
    <string name="rest_device_wifi">配网准备</string>
    <string name="input_wifi_tips">请确保当前连接的家庭 Wi-Fi 网络为 2.4GHz 或 2.4/5GHz 混合网络</string>
    <string name="wifi_unconnected">手机 Wi-Fi 连接（WLAN 连接) 未开启，请打开手机 Wi-Fi 连接后重试。</string>
    <string name="change_other_wifi">更换 Wi-Fi</string>
    <string name="connecting">设备连接</string>
    <string name="phone_connecting_device">手机连接设备中......</string>
    <string name="phone_connect_device_success">手机连接设备成功</string>
    <string name="phone_connect_device_failed">手机连接设备失败</string>
    <string name="sending_data_to_device">向设备传输信息中...</string>
    <string name="send_data_to_device_success">向设备传输信息成功</string>
    <string name="send_data_to_device_failed">向设备传输信息失败</string>
    <string name="query_devices_state">设备连接网络中...</string>
    <string name="query_devices_state_success">设备连接网络成功</string>
    <string name="query_devices_state_failed">设备连接网络失败</string>
    <string name="plugin_initial_processing">扩展程序初始化中</string>
    <string name="plugin_initial_success">扩展程序初始化成功</string>
    <string name="plugin_initial_failed">扩展程序初始化失败</string>
    <string name="retry">重试</string>
    <string name="complete">完成</string>
    <string name="go_setting_wifi">去设置 Wi-Fi</string>
    <string name="turn_on_location">使用过程中，本应用需要访问定位权限，用于扫描附近设备等功能</string>
    <string name="pair_success">配网成功</string>
    <string name="pair_failure">配网失败</string>
    <string name="device_wifi_tips_1">1. 点击“去设置 Wi-Fi”，进入系统设置页面</string>
    <string name="device_wifi_tips_2">2. 连接名字为“mova-vacuum-xxx”的WiFi无线网络</string>
    <string name="device_wifi_tips_3">3. 手动返回 MOVAhome</string>
    <string name="wifi_has_no_password">请确认Wi-Fi网络连接是否不需要填写密码？</string>
    <string name="input_wifi_password">输入密码</string>
    <string name="yes">是的</string>
    <string name="searching_wifi_devices">正在扫描附近设备</string>
    <string name="searching_wifi_devices_no">扫描不到设备？尝试手动连接</string>
    <string name="tips_device_scan_ing">正在扫描设备，请稍候</string>
    <string name="tips_device_scan_failed">未扫描到附近设备，请确认设备当前已重置成功后，重新尝试扫描</string>
    <string name="reset_device">从头开始</string>
    <string name="scanning_continue">继续扫描</string>
    <string name="scanning_wifi_close">手机 Wi-Fi 连接功能关闭，无法发现 Wi-Fi 网络.</string>
    <string name="scanning_bluetooth_close">当前手机蓝牙关闭，是否打开以扫描附近蓝牙设备？</string>
    <string name="device_connect_prepare">@string/rest_device_wifi</string>
    <string name="device_connect_prepare_tip_1">1. Wi-Fi 信号覆盖：请保证手机及设备都位于家庭中网络信号比较好的位置，避免因网络信号较差造成设备连接失败.</string>
    <string name="device_connect_prepare_tip_2">2. 手机系统权限：为保证配网的正常进行，请务必打开应用程序的定位权限</string>
    <string name="device_connect_prepare_tip_3">3. 2.4GHz Wi-Fi 信号：为了确保设备连接，请确保您家庭 Wi-Fi 网络已开启 2.4GHz 信号模式，或已开启 2.4/5GHz 混合信号模式。</string>
    <string name="device_connect_prepare_tip_4">4. 如果您的家庭路由器分别提供了 2.4GHz/5GHz Wi-Fi 信号接入，请确保手机连接的 Wi-Fi 名称是支持2.4GHz 的。</string>
    <string name="device_connecting">正在连接...</string>
    <string name="text_continue">继续</string>
    <string name="device_reset">设备重置</string>
    <string name="device_connect">连接设备</string>
    <string name="wifi_elect_tips">选择连接 Wi-Fi 后重新连接</string>
    <string name="current_wifi">当前Wi-Fi</string>
    <string name="empty_wifi_name">请选择或输入 Wi-Fi 网络名</string>
    <string name="camera_permission_not_allow">获取相机权限失败，请手动设置开启</string>
    <string name="cancel_receive">删除设备</string>
    <string name="authorize_location_tip">无法获取到手机当前连接的 Wi-Fi 网络信息，请打开“设置-隐私-定位服务”开启定位服务，并允许 App 使用此服务。</string>
    <string name="device_wifi_connect_failed">请将手机连接到名为 mova-vacuum-xx-miapxxxx 的Wi-Fi 后返回MOVAhome。</string>
    <string name="scanning_device">正在扫描设备</string>
    <string name="qr_text_scan">扫一扫</string>
    <string name="qr_text_tips">请扫描设备上的二维码</string>
    <string name="qr_text_add_manually">手动添加</string>
    <string name="qr_text_flashlight">手电筒</string>
    <string name="text_add">加入</string>
    <string name="text_tips_add">“MOVAhome”想要加入Wi-Fi网络“%s”吗？</string>
    <string name="text_connect_failed_try_manual">连接失败，可尝试手动连接</string>
    <string name="text_connect_manual">手动连接</string>
    <string name="qr_recognize_error">无法识别该二维码，请扫描设备上的二维码或尝试手动添加</string>
    <string name="no_net_check_state">无网络连接，请检查您的网络状态</string>
    <string name="text_device_bt_scanning">正在扫描附近的蓝牙设备...</string>
    <string name="text_bt_permission_not_grant">未授权蓝牙权限</string>
    <string name="text_bt__request_permission_grant_tips">为扫描、添加和使用蓝牙设备，请打开手机系统设置中的“隐私-蓝牙”。允许MOVAhome使用蓝牙权限</string>
    <string name="upload_issue_logs">同时发送问题日志</string>
    <string name="text_video_compression_ing">视频压缩中，%d</string>
    <string name="connect_prepare_desc">建议您提前确认以下事项，以确保能顺利配网</string>
    <string name="connect_prepare_tip_1">1、请确认手机、设备、家庭Wi-Fi准备就绪，保证手机及设备都位于家庭中网络信号比较好的位置。</string>
    <string name="connect_prepare_tip_2">2、请确保打开“MOVAhome”App的定位权限。</string>
    <string name="connect_prepare_tip_3">3、请确保手机与设备连接的是同一个2.4G的Wi-Fi网络。</string>
    <string name="connect_prepare_tip_4">4、请避免多台手机同时配置网络。</string>
    <string name="start_network_config">开始配网</string>
    <string name="video_network_config">视频配网教程</string>
    <string name="network_config_error_location">请检查MOVAhome App的“定位权限”是否已开启，可在手机“设置”页，找到对应App进入开启。</string>
    <string name="network_config_error_localnetwork">请检查MOVAhome App的“本地网络”权限是否已开启，可在手机“设置”页，找到对应App进入开启。</string>
    <string name="network_config_error_update">请检查MOVAhome App版本是否为最新版本。</string>
    <string name="network_config_error_wifi">如果家里使用双频路由器，且路由器发出了两个不同热点名，请在手机中忽略5G频段的Wi-Fi热点信号，确保手机连接到2.4G的热点。</string>
    <string name="network_config_error_mac">请检查路由器是否设置“不允许其他设备加入”或者MAC地址屏蔽，建议重置设置后再次配网。</string>
    <string name="network_config_error_vpn">配网不支持VPN或者代理服务器。</string>
    <string name="network_config_error_auth">不支持通过网页鉴权和认证的网络。</string>
    <string name="network_config_error_wifiname">设备不支持热点名隐藏的路由器，Wi-Fi热点名称必须可见，手机能够识别才能成功连接上。</string>
    <string name="causes_network_config">配网失败原因</string>
    <string name="check_causes_network_config">查看配网失败原因</string>
    <string name="look_up_desc">请按照以下进行排查</string>
    <string name="contact_customer_service">仍无法解决配网问题，请联系客服</string>
    <string name="network_config_error_wifipwd">请检查输入的Wi-Fi网络名称与密码是否正确，如有误，请及时修改。</string>
    <string name="network_config_error_character">网络名称和密码建议采用英文字母和数字的组合，避免使用特殊字符和中文。</string>
    <string name="text_scan_ble_tips">MOVAhome需要蓝牙权限扫描发现附近的设备</string>
    <string name="text_goto_open">去开启</string>
    <string name="text_open_ble_tips">蓝牙权限未开启</string>
    <string name="text_scan_lav_tips">请将手机尽量靠近要添加的设备</string>
    <string name="text_scan_lav_nothing">未发现附近设备请手动添加</string>
    <string name="text_scan_auto">自动扫描配网</string>
    <string name="text_open_wifi_tips">MOVAhome需要位置权限扫描附近的Wi-Fi网络</string>
    <string name="text_input_wifi_tips">Wi-Fi密码输入错误是最常见的配网失败的原因之一，请仔细检查Wi-Fi密码</string>
    <string name="text_choose_wifi">选择Wi-Fi</string>
    <string name="text_saved_wifi">已保存的Wi-Fi</string>
    <string name="text_choose_other_wifi">选择其他Wi-Fi</string>
    <string name="text_home_common_command">常用</string>
    <string name="text_home_fast_command">快捷指令</string>
    <string name="text_operation_interrupt_task_continue">此操作会中断当前任务，仍执行？</string>
    <string name="text_home_fast_command_setting">设置快捷指令</string>
    <string name="text_wifi_manager">Wi-Fi管理</string>
    <string name="text_ip_address">IP地址</string>
    <string name="text_password">密码</string>
    <string name="text_weak">弱</string>
    <string name="text_strong">强</string>
    <string name="text_correct_input_wifi_info">请确保输入的家庭Wi-Fi账号密码正确</string>
    <string name="text_save_wifi_info">保存Wi-Fi</string>
    <string name="text_title_add_new_wifi">新增Wi-Fi</string>
    <string name="text_add_wifi_info_repeat">Wi-Fi已存在，请勿重复添加</string>
    <string name="text_add_wifi_more">添加多个Wi-Fi</string>
    <string name="text_add_wifi_more_tips_1">1、支持用户为设备添加多个Wi-Fi。</string>
    <string name="text_add_wifi_more_tips_2">2、如果家中有多个Wi-Fi，可以进入设备“设置”&gt;“Wi-Fi管理”选择“添加Wi-Fi”，为设备添加多个Wi-Fi。</string>
    <string name="text_add_wifi_more_tips_3">3、当前Wi-Fi信号较弱时，设备会自动切换强Wi-Fi信号。</string>
    <string name="home_find_device">发现设备</string>
    <string name="text_find_more_device">发现多个设备</string>
    <string name="scan_qrcode_connect">扫码连接</string>
    <string name="where_is_qr_code">二维码在哪里？</string>
    <string name="text_permission_enable">已开启</string>
    <string name="text_permission_disable">未开启</string>
    <string name="scan_device_to_connect">扫描机身二维码连接设备</string>
    <string name="check_where_qr">查看二维码位置</string>
    <string name="position_of_qr">二维码位置</string>
    <string name="scan_add">扫码添加</string>
    <string name="text_nearby_devices">附近可添加的设备</string>
    <string name="current_device_nuInfo">当前二维码无设备信息，请手动添加设备</string>
    <string name="product_not_support">您所在地区不支持该设备</string>
    <string name="product_not_online">该设备未上线</string>
    <string name="product_not_classified">该设备未分类配置</string>
    <string name="search_nearby_device">已发现附近的设备</string>
    <string name="scan_sn_code">扫描MOVA产品SN码</string>
    <string name="view_scan_sn_code">查看产品SN码位置</string>
    <string name="know">知道了</string>
    <string name="text_armap_rescan">重新扫描</string>
    <string name="network_config_error_network_unreachable">请检查手机是否已连接Wi-Fi或者已开启移动数据服务，确保手机始终处于有网络状态</string>
    <string name="text_qr_connect_tips">点击下方按钮后，点击\"加入\"\n手机将主动连接设备热点进行配网</string>
    <string name="text_guide_step_1_title">设备操作</string>
    <string name="text_guide_step_1_desc">点击后可共享、删除设备、重命名设备</string>
    <string name="text_home_enter_device">进入设备页</string>
    <string name="tabBar_vip">会员</string>
    <string name="text_guide_step_2_desc">点击后可选择开始清洁或执行快捷指令。</string>
    <string name="text_guide_step_3_desc">点击后主机将会结束当前任务，返回基站充电。</string>
    <string name="text_clean_sheet_command_title">执行快捷指令</string>
    <string name="text_clean_sheet_command_hint">您还未创建任何快捷指令，马上创建进行个性化快捷清洁</string>
    <string name="text_connect_guide">连接指引</string>
    <string name="text_net_band_error">网络频段错误</string>
    <string name="text_limit_band">设备仅支持连接2.4GHz频段网络</string>
    <string name="text_contiune_to_connect">继续连接</string>
    <string name="text_switch_other_wifi">切换Wi-Fi</string>
    <string name="text_current_band_error">当前连接WI-FI：%s是5G频段网络，请将WI-FI连接至2.4G网络后再试</string>
    <string name="text_turn_on_desc_1">将主机放回基站或长按电源键开机</string>
    <string name="text_turn_on_desc_2">听到开机提示音，按键指示灯亮起</string>
    <string name="text_powered_on_checkbox">已开机</string>
    <string name="text_turn_on_device">开启设备</string>
    <string name="text_already_complete_tip">您是否已完成以上操作，并听到配置网络提示音？</string>
    <string name="text_has_not_heard">未听到</string>
    <string name="text_search_nearby_robot">正在搜索附近的设备热点，请稍后...</string>
    <string name="text_close_to_router">请让设备、手机尽量靠近路由器</string>
    <string name="text_connect_by_manual">手动连接</string>
    <string name="text_ble_pairing_title">蓝牙配对</string>
    <string name="text_ble_pairing_desc">请长按机器人旋钮3S，机器人将进入蓝牙配对模式</string>
    <string name="text_ble_pairing_checkbox">我已听到机器人进入蓝牙配对模式</string>
    <string name="text_ble_pairing_start">开始配对</string>
    <string name="text_solution_title_1">1.机器人无法收到设备配对请求</string>
    <string name="text_solution_desc_1">请确保机器人与手机之间的距离小于10m，且已开机</string>
    <string name="text_solution_title_2">2.机器人未设置PIN码</string>
    <string name="text_solution_desc_2">机器人出厂时无默认PIN码，请开机后根据机器人显示屏页面的指引，在机器人显示屏上设置四位数PIN码</string>
    <string name="text_turn_on_desc_wj_3">3）将主机正确放置于充电座上，确保主机底部充电金属片接触到充电座充电触电，等待5秒；</string>
    <string name="text_turn_on_desc_wj_4">4）听到开机提示音，按键指示灯亮起，再进入下一步。</string>
</resources>