<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/ll_root"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center_vertical"
        android:paddingHorizontal="28dp"
        android:text="@string/text_solution_title_1"
        android:textColor="@color/common_textMain"
        android:textSize="@dimen/common_textLarge"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="28dp"
        android:background="@drawable/common_shape_white_r8"
        android:gravity="center_vertical"
        android:padding="10dp"
        android:text="@string/text_solution_desc_1"
        android:textColor="@color/common_textMain"
        android:textSize="@dimen/common_textNormal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:gravity="center_vertical"
        android:paddingHorizontal="28dp"
        android:text="@string/text_solution_title_2"
        android:textColor="@color/common_textMain"
        android:textSize="@dimen/common_textLarge"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="28dp"
        android:background="@drawable/common_shape_white_r8"
        android:gravity="center_vertical"
        android:padding="10dp"
        android:text="@string/text_solution_desc_2"
        android:textColor="@color/common_textMain"
        android:textSize="@dimen/common_textNormal" />


</LinearLayout>
