<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <android.dreame.module.view.CommonTitleView
        android:id="@+id/titleView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/text_turn_on_device"
        app:titleMarginStart="20dp"
        app:titleShowPosition="center"
        tools:layout_height="45dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingBottom="20dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/iv_device"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:src="@drawable/ic_placeholder_device_boot"
                    app:layout_constraintDimensionRatio="350:240"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/tv_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="32dp"
                android:layout_marginTop="36dp"
                android:gravity="center"
                android:text="@string/text_turn_on_desc_1"
                android:textAlignment="gravity"
                android:textColor="@color/common_textMain"
                android:textSize="@dimen/common_textLarge"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_content2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="32dp"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/text_turn_on_desc_2"
                android:textAlignment="gravity"
                android:textColor="@color/common_textMain"
                android:textSize="@dimen/common_textLarge"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_content3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="32dp"
                android:layout_marginTop="5dp"
                android:gravity="start"
                android:text="@string/text_turn_on_desc_wj_3"
                android:textAlignment="gravity"
                android:textColor="@color/common_textMain"
                android:textSize="@dimen/common_textLarge"
                android:textStyle="bold"
                android:visibility="gone" />


            <TextView
                android:id="@+id/tv_content4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="32dp"
                android:layout_marginTop="5dp"
                android:gravity="start"
                android:text="@string/text_turn_on_desc_wj_4"
                android:textAlignment="gravity"
                android:textColor="@color/common_textMain"
                android:textSize="@dimen/common_textLarge"
                android:textStyle="bold"
                android:visibility="gone" />

        </LinearLayout>

    </ScrollView>

    <CheckBox
        android:id="@+id/ctv_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginBottom="14dp"
        android:button="@drawable/selector_confirm_checkbox"
        android:gravity="center"
        android:padding="12dp"
        android:paddingHorizontal="12dp"
        android:text="@string/text_powered_on_checkbox"
        android:textAlignment="gravity"
        android:textColor="@color/common_textMain"
        android:textSize="@dimen/common_textLarge" />

    <TextView
        android:id="@+id/tv_confirm"
        style="@style/common_style_button"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="32dp"
        android:enabled="false"
        android:text="@string/next"
        android:textAlignment="gravity"
        app:layout_constraintBottom_toTopOf="@id/indicator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.dreame.feature.connect.views.ConnectIndicatorView
        android:id="@+id/indicator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="34dp"
        app:layout_constraintBottom_toBottomOf="parent" />

</LinearLayout>